# CASE-Conflict-Aware-Synthesis-of-Evidence

./: .gitignore  README.md  pyproject.toml
src/: requirements.txt
src/baselines/: base.py  bm25.py  qlm.py  single_path_rag.py  vanilla_prompting.py
src/case/: advocate.py  hypothesis_generator.py  jury.py
src/models/: openrouter_client.py
src/retrieval/indexing/: neural_rag.py
