[project]
name = "cs-646-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.5.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.1.1",
]
